[workspace]
resolver = "2"
members = [
    "node",
    "pallets/bounties",
    "pallets/community",
    "pallets/event",
    "pallets/passport",
    "pallets/proposal",
    "pallets/token-swap",
    "runtime",
]
[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
