[package]
authors = ["Jur Team <https://github.com/jurteam>"]
edition = '2021'
name    = 'jur-primitives'
version = '1.0.0'

[dependencies]
parity-scale-codec = { version = "3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", default-features = false }
sp-std = { default-features = false, version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-runtime = { default-features = false, version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
rustc-hex = { version = "2.1.0", default-features = false }
serde_derive = { version = "1.0.117", optional = true }
sp-io = { default-features = false, version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
rlp = {default-features = false, version ="0.5.1"}
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }

[dev-dependencies]
hex-literal = "0.3.4"

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-std/std",
  "sp-runtime/std",
  "rustc-hex/std",
  "serde_derive",
  "serde/std",
  "sp-io/std",
  "rlp/std",
  "frame-support/std",
]

